2014-02-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\cartouche): do not do \nonarrowing at all;
	we want @example, etc., to be indented normally inside @cartouche.
	Don't we?  Report from Arnold, 09 Feb 2014 00:20:26.

2014-02-07  Alexis Hildebrandt <alexis.hildebrandt@surryhill.net> (tiny change)

	* doc/refcard/txirefcard.tex: typos.

2014-02-06  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\ure{pre,post}stretchamount): new macros.
	(\uref{pre,post}stretch): use them.
	(\raggedright): reset them to 0pt.  Also increase rag to 2.4em.
	Bug report from Werner Lember, 06 Feb 2014 19:01:05.

2014-02-02  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (@t{@@documentencoding}): ISO-8859 ordering
	wrong.  Report from Reinhard Kotucha, 2 Feb 2014 19:32:24.

2014-01-30  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\commondummiesnofonts): \let\xeatspaces=\eatspaces
	so @macros that make index entries don't end up with spurious
	spaces in the output.  Report from Arnold, 30 Jan 2014 22:11:42.

2014-01-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\errfootnote): nested footnotes not supported.
	(\dofootnote): check for this.  Report from Arnold.

2014-01-16  Sergey Poznyakoff  <gray@gnu.org>

	* info/info.c (show_error_node): Avoid coredumping when
	writing output to a file.

2014-01-09  Sergey Poznyakoff  <gray@gnu.org>

	Fix search boundary checking.
	Based on report from Gavin Smith <gavinsmith0123@gmail.com>

	* info/search.c (regexp_search): Save previous values of
	start and end bounds (sorted) and rescan the buffer if these
	differ from the actual values.
	Fix boundary checking (using end bound instead of the buffer
	length).
	Use x2nrealloc to grow matches buffer.

2014-01-06  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi: 2014.

	* doc/texinfo.texi (@url): split into several nodes:
	(@t{@@url} Examples,
         URL Line Breaking,
         @t{@@url} PDF Output Format,
         PDF Colors).  Document the PDF-only \urefurlonlylinktrue