@@ -1,3 +1,7 @@
+2014-02-15  Patrice Dumas  <pertusus@free.fr>
+	* Texinfo/Convert/DocBook.pm: do not use lineannotation for 
+	@r, the semantics are not the same.  Report from Aharon Robbins.
+
 2014-02-09  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.tex (\cartouche): do not do \nonarrowing at all;
